# doctor-link

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  TODO-P1-P1PLUS-HARDENING.md  TODO-P2-HARDENING.md  TODO-P2PLUS.md  TODO-P3-HANDOFF.md  TODO-P3-P5.md  TODO-P4.md  TODO-P5.10.md  TODO-P5.9.md  TODO-P5.md  TODO-P6.md  TODO-P7.md  TODO-post-release-hardening.md  TODO-v0.4.0.md  TODO-v0.5.0.md  TODO-v0.5.1.md  TODO.md  pyproject.toml
.doctorlink/: assertions.yml  collect.yml  diagnosis.yml  doctorlink.yml  package.yml  reproduce.yml  test-matrix.yml  verification.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  diagnostic_issue.yml  feature_request.yml
.github/workflows/: ci.yml  manual-validation.yml  post-release-smoke.yml  pypi-publish.yml  release.yml  self-validation.yml
docs/: COMMANDS.md  DOCTOR_LINK_REQUIREMENTS_V1.md  EXTERNAL_PRACTICES_EXPANDED.md  FOUNDATION_ARCHITECTURE.md  FOUNDATION_RESEARCH_ROUND2.md  PRODUCT_DESIGN.md  PROJECT_TARGET_AND_FOUNDATION.md  REFERENCE_REQUIREMENTS.md  RESEARCH_EXTERNAL_EXPERIENCE.md  acceptance-review.md  adapters.md  ai-code-handoff-template.md  ai-coding-workflow.md  architecture-overview.md  automated-diagnosis-reliability.md  automatic-solve.md  cli-entrypoint-review.md  cli-reference.md  collector-extension-points.md  compatibility-and-deprecation.md  diagnose-now.md  diagnostic-package-data.md  diagnostic-package-format.md  documentation-parity.md  e2e-validation.md  examples-and-templates.md  export-security-checklist.md  final-non-local-closure.md  full-capability-validation.md  future-sdk-boundary.md  github-actions-pr-diagnostics.md  github-repository-guide.md  handoff-profile-extension-points.md  installation.md  issue-triage.md  local-workbench.md  p1-p1plus-audit.md  p1-p2-final-audit.md  p2-final-audit.md  p2-hardening-plan.md  (+55 more)
docs/adr/: 0001-use-project-management-documents.md  0002-p1-plus-cli-evidence-pipeline.md  0003-local-web-ui-boundary.md  0004-p2-diagnostic-workbench-roadmap.md  0005-p3-p5-roadmap.md  0006-p6-standardization-ecosystem-roadmap.md  0007-review-notes-read-only-boundary.md  0009-p2plus-mainline-enhancement.md
docs/examples/: doctor-link-pr-diagnostics.yml
docs/guides/: no-code-quick-start.en.md  no-code-quick-start.zh-CN.md
docs/readme/: README.en.md  README.zh-CN.md
docs/release-notes/: 0.1.0-draft.md  README.md  github-release-0.1.0-draft.md  github-release-v0.1.0-rc.1-draft.md  p2-draft.md  v0.1.0-rc.1.md
docs/roadmap/: p2plus.md  p3-p5.md  p4.md  p6.md  p7.md  p8-no-code-user-experience.md  v0.4.0-real-project-reliability.md  v0.5.0-description-to-reproduction.md
docs/use-cases/: ai-coding-tool.md  developer.md  non-programmer-user.md  team-workflow.md
docs/validation/: README.md  adversarial-deep-diagnosis-validation.md  cloud-validation-certificate.md  deep-diagnostics-clean-install-validation.md  failure-mode-validation-harness.md  javascript-typescript-solve-validation.md  local-quality-scorecard.md  local-validation-pending.md  pipx-install-validation.md  public-project-validation-harness.md  (+13 more)
doctor_link/: __init__.py  assist_cli.py  benchmark_cli.py  cli.py  diagnose_now.py  diagnose_now_cli.py  diagnose_report.py  diagnose_summary.py  diagnose_workflow.py  diff_cli.py  entrypoint.py  explain_cli.py  guided_cli.py  handoff_cli.py  hardening_cli.py  home_cli.py  knowledge_archive_cli.py  p4_cli.py  solve_cli.py  wizard_cli.py
scripts/: e2e_validate.sh  p7_runtime_validate.sh  publish_pypi.sh  self_validate_doctor_link.sh  start-doctor-link-macos.command  start-doctor-link-windows.ps1  validate_distribution_contents.py  validate_doctor_link.sh  validate_public_projects.py  validate_real_github_capability.py
tests/: test_adapter_docs.py  test_adapter_runtime.py  test_adapters_vly.py  test_adversarial_deep_diagnosis.py  test_ai_handoff.py  test_ai_task_generation.py  test_ai_task_templates.py  test_automatic_solve.py  test_benchmark.py  test_change_receipt.py  test_cli_minimal.py  test_collector.py  test_complex_simulation_regressions.py  test_config_loader.py  test_conformance.py  test_diagnose_now.py  test_diagnose_now_json_output.py  test_diagnose_now_output.py  test_diagnose_now_report_json.py  test_diagnose_report.py  test_diagnosis_pipeline.py  test_diagnosis_strategy.py  test_diagnosis_workflow.py  test_diagnostic_knowledge_schema.py  test_distribution_readiness.py  test_ecosystem_assets_schema.py  test_enterprise_governance_schema.py  test_examples_and_templates.py  test_examples_phase_b.py  test_examples_templates.py  test_failure_mode_validation.py  test_full_capability_inventory.py  test_github_actions_docs.py  test_guided_assistant.py  test_handoff_cli.py  test_integrity_privacy.py  test_integrity_schema.py  test_knowledge_archive.py  test_p1_evidence.py  test_p2plus_accessibility.py  (+48 more)
(+182 files in other folders)
