[project]
name = "doctor-link"
version = "0.5.1"
description = "Universal diagnostic and AI collaboration tool for software debugging."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "linkyang01" }
]
keywords = [
  "diagnostics",
  "ai-coding",
  "debugging",
  "developer-tools",
  "evidence"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "click>=8.1.7,<9",
  "jinja2>=3.1.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.9.0",
  "build>=1.2.0",
  "pip-audit>=2.9.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
  "twine>=5.0.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/linkyang01/doctor-link"
Repository = "https://github.com/linkyang01/doctor-link"
Issues = "https://github.com/linkyang01/doctor-link/issues"

[project.scripts]
doctor-link = "doctor_link.entrypoint:main"

[tool.setuptools.packages.find]
include = ["doctor_link*"]

[tool.setuptools.package-data]
doctor_link = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["doctor_link"]

[tool.coverage.report]
fail_under = 85
show_missing = true
